2005-01-09  Maurizio Paolini <paolini@dmf.unicatt.it>

	* new action to construct the vertices of a polygon

	* new action to construct a generic triangle (as a polygon) given
	its vertices

2004-12-28  Maurizio Paolini <paolini@dmf.unicatt.it>

	* polygons are filled; no boundary drawn

	* fixed a problem when trasforming a segment with
	a projective (nonaffine) transformation; in certain
	cases the result is invalid (no longer a segment)

	* fixed a bug in similitude transformation as suggested by 
	Pino Toscano (#85171)

2004-12-27  Pino Toscano <toscano.pino@tiscali.it>

	* Fix bug #95637: Scrolling does not work during construction of
	a new object

2004-12-24  Pino Toscano <toscano.pino@tiscali.it>

	* Kig can now save and open compressed files with extension
	.kigz. This format is a gzip compressed tarball.

2004-12-14  Pino Toscano <toscano.pino@tiscali.it>

	* More tooltips and "what's this" to some dialog.

	* No more file name in every file.

	* More control on macro name: when loading from file, if a macro
	has no name, we'll assign it a bogus one (like "Unnamed macro
	#id"). Furthermore, we ensure that the user don't set an empty
	name for a macro in the Edit Types Dialog.

	* Other misc changes.

2004-11-09  Pino Toscano <toscano.pino@tiscali.it>

	* Made kig.dektop and kig_part.desktop more compliant to
	freedesktop.org's desktop entry specifications.

	* Introduced PolygonImp, a new ObjectImp to handle all the types
	of polygons (both generic and regular ones). Modified PoligonType
	and PoligonBCVConstructor to use the new PolygonImp. Adapted also
	the ObjectImpVisitor to visit PolygonImp.

	* Improved the LatexExporter to export PolygonImp's.

	* Fixed a crash that occurs when selecting (during a text label
	construction) the property "Name" for an object with no
	name(calcer) set.

	* Other misc changes.

2004-11-08  Maurizio Paolini <paolini@dmf.unicatt.it>

	* Scaling and stretching can be defined using two segments to